--- a/pagina2.html
+++ b/pagina2.html
@@ -61,8 +61,10 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg"> Figura1 - Cartografia</p>
+       <figure>
         <img class="imghis" src="imagens/resumo-da-cartografia.jpg" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: resumo escolar, 2023</p>
+<figcaption>Fonte: resumo escolar, 2023</p>
+       </figure>
       </div>
 
       <p class="conteudo">Para que serve a cartografia ? </p>
@@ -101,8 +103,10 @@
 
       <div class="hisimg">
         <p class="referenciaimg">Figura 2 - Cartografia sistemática</p>
+       <figure>
         <img class="imghis" src="imagens/Carta-topografica-IBGE.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2022</p>
+<figcaption>Fonte: GIOVANINI, 2022</p>
+       </figure>
       </div>
       <p class="conteudo">Cartografia temática: ramo da cartografia dedicado à produção de mapas com base em informações
         geográficas diversas, não se restringindo às dimensões físicas de uma área. Seus produtos indicam a ocorrência
@@ -111,8 +115,10 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 3 - Cartografia temática</p>
+       <figure>
         <img class="imghis" src="imagens/cartografia-temática.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2023
+<figcaption>Fonte: GIOVANINI, 2023
+       </figure>
         </p>
       </div>
       <p class="tituloParagrafo">Conceitos de cartografia
@@ -123,8 +129,9 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 4 - Tipos de coordenadas geográficas</p>
+       <figure>
         <img class="imghis" src="imagens/sistema-de-projecao-cartografica-780x424.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2021 </p>
+<figcaption>Fonte: GIOVANINI, 2021 </p>
       </div>
       <p class="conteudo">CProjeção cartográfica: são representações da Terra em uma superfície plana. Para isso, baseiam-se
         em uma rede composta por linhas imaginárias horizontais e verticais (paralelos e meridianos) perpendiculares
@@ -133,8 +140,10 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 5 - Projeção cartográfica</p>
+       <figure>
         <img class="imghis" src="imagens/coordenadas-geograficas-1024x490.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2021 </p>
+<figcaption>Fonte: GIOVANINI, 2021 </p>
+       </figure>
       </div>
       <p class="conteudo">Escala cartográfica: é uma relação numérica (proporção) entre as dimensões de uma superfície,
         conforme são representadas no mapa, e suas dimensões reais, medidas de forma linear. Uma escala de 1:250.000
@@ -146,8 +155,10 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 6 - Mapa mundi</p>
+       <figure>
         <img class="imghis" src="imagens/mapa-mundi-político.png.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2020</p>
+        <figcaption>Fonte: GIOVANINI, 2020</p>
+       </figure>
       </div>
       <p class="conteudo">Essa projeção é a consequência da projeção dos paralelos e meridianos sobre um cilindro. Esse tipo
         de projeção tem os paralelos retos e horizontais; e os meridianos retos e verticais, as regiões de latitudes
@@ -162,8 +173,10 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 7 - Projeção cônica</p>
+       <figure>
         <img class="imghis" src="imagens/3-19.gif" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: RAMOS, 2018</p>
+        <figcaption>Fonte: RAMOS, 2018</p>
+       </figure>
       </div>
       <p class="conteudo">Projeção Azimutal</p>
       <p class="conteudo">A Projeção Azimutal tem como ponto de referência o Polo Sul ou Norte, normalmente o Norte.
@@ -171,8 +184,10 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 8 - Projeção azimutal</p>
+       <figure>
         <img class="imghis" src="imagens/proclau6.jpg" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: MENDONÇA, 2013</p>
+        <figcaption>Fonte: MENDONÇA, 2013</p>
+       </figure>
       </div>
       <p class="conteudo">Projeção Robinson</p>
       <p class="conteudo">Essa é a projeção mais usada na atualidade, ela não causa deformações nas formas, porém não preserva
@@ -181,8 +196,10 @@
 
       <div class="hisimg">
         <p class="referenciaimg">Figura 9 - Projeção Robinson</p>
+       <figure>
         <img class="imghis" src="imagens/4fd7ed1cae73e62edab51157d5567389.jpg" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: PENA, 2023</p>
+        <figcaption>Fonte: PENA, 2023</p>
+       </figure>
       </div>
 
       <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
