--- a/pagina3,1.html
+++ b/pagina3,1.html
@@ -61,8 +61,10 @@
       <div class="hisimg">
         <p class="referenciaimg">Figura 1 - Representação de geografia política
         </p>
+       <figure>
         <img class="imghis" src="geopoliticaimg/Geografia-Politica-300x297.jpg" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: CONCEITOS, 2023</p>
+        <figcaption>Fonte: CONCEITOS, 2023</p>
+       </figure>
       </div>
 
       <p class="conteudo">Geopolítica: coloca o Estado no centro da ação e se volta à compreensão das relações de poder entre
@@ -72,8 +74,10 @@
       <div class="hisimg">
         <p class="referenciaimg">Figura 1 - Representação de geografia política
         </p>
+       <figure>
         <img class="imghis" src="geopoliticaimg/o-que-e-geopolitica.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: CONCEITOS, 2023</p>
+        <figcaption>Fonte: CONCEITOS, 2023</p>
+       </figure>
       </div>
       <p class="tituloParagrafo">Ideias</p>
       <p class="conteudo">
