--- a/pagina3,2.html
+++ b/pagina3,2.html
@@ -46,8 +46,10 @@
       <div class="hisimg">
         <p class="referenciaimg">Figura 1 - Diferentes climas
         </p>
+       <figure>
         <img class="imghis" src="climaimg/clima.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: GUITARRA, 2023
+        <figcaption>Fonte: GUITARRA, 2023
+       </figure>
         </p>
       </div>
       <p class="conteudo">Clima é o conceito que se remete à sucessão dos tipos de tempo observados em uma região ao longo dos
