--- a/pagina3,3.html
+++ b/pagina3,3.html
@@ -52,15 +52,19 @@
       <div class="hisimg">
         <p class="referenciaimg">Figura 1 - Formas e componentes do relevo
         </p>
+       <figure>
         <img class="imghis" src="climaimg/clima.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: RIBEIRO, 2023
+        <figcaption>Fonte: RIBEIRO, 2023
+       </figure>
         </p>
       </div>
       <div class="hisimg">
         <p class="referenciaimg">Figura 2 - Relevo
         </p>
+       <figure>
         <img class="imghis" src="climaimg/clima.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: Baduka, 2023
+        <figcaption>Fonte: Baduka, 2023
+       </figure>
         </p>
       </div>
       <p class="conteudo">O relevo do Brasil foi categorizado por Aziz Ab’Sáber e Jurandyr Ross. De acordo com Ab’Sáber, o
