--- a/pagina3,4.html
+++ b/pagina3,4.html
@@ -54,7 +54,7 @@
           <p class="referenciaimg">Figura 15 - Queima de uma floresta
           </p>
           <img class="imghis" src="probAmbImg/incendioFloresta.jpeg" alt="">
-          <p class="referenciaimg" id="refImage">Fonte: Roxo, 2020
+          <figcaption>Fonte: Roxo, 2020
           </p>
         </div>
         <ul class="list">
