--- a/pagina3,5.html
+++ b/pagina3,5.html
@@ -42,8 +42,10 @@
       <div class="hisimg">
         <p class="referenciaimg">Figura 1 - Representação da economia
         </p>
+       <figure>
         <img class="imghis" src="geoecon/a-geografia-economica-compreende-as-transformacoes-economia-sobre-espaco-geografico-53ea549c19444.webp" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: MUNDOEDUCACAO, 2023
+        <figcaption>Fonte: MUNDOEDUCACAO, 2023
+       </figure>
         </p>
       </div>
       <p class="conteudo">Podemos considerar que o espaço geográfico, tanto no meio urbano quanto no meio rural é essencialmente produzido, ou seja, é construído pelas práticas humanas. O estabelecimento dessas práticas está, quase sempre, relacionado à manifestação de condutas no meio financeiro e tecnológico que irão sustentar ações de impacto. (PENA, 2023)</p>
