--- a/pagina3,6.html
+++ b/pagina3,6.html
@@ -49,8 +49,10 @@
       <div class="hisimg">
         <p class="referenciaimg">Figura 17 - Localização dos sambaquis
         </p>
+       <figure>
         <img class="imghis" src="sambaquiImg/localSambaqui.jpeg" alt="">
-        <p class="referenciaimg" id="refImage">Fonte: DE SÁ <em>et al.</em>, 2021.</p>
+<figcaption>Fonte: DE SÁ <em>et al.</em>, 2021.</figcaption>
+       </figure>
       </div>
       <p class="tituloParagrafo">Eram de que espécie?</p>
       <p class="conteudo">Quem eram essas pessoas que hoje chamamos de Sambaquis?Primeiro devemos levar sempre em conta: eles eram Homo sapiens sapiens (KLUEGER,2004).
