add menu semi-responsive

--- a/index.html
+++ b/index.html
@@ -17,16 +17,27 @@
 
   </header>
   <nav>
-    <div id="menu">
+    <div id="menu" class="menuDropdown">
       <ul>
-        <li><a href="index.html">Página Inicial</a></li>
-        <li><a href="pagina2.html">Cartografia</a></li>
-        <li><a href="pagina3,1.html">Geopolitica</a></li>
-        <li><a href="pagina3,2.html">Climas</a></li>
-        <li><a href="pagina3,3.html">Relevo</a></li>
-        <li><a href="pagina3,4.html">Problemas Ambientais</a></li>
-        <li><a href="pagina3,5.html">Geografia Econômica</a></li>
-        <li><a href="pagina3,6.html">Sambaqui</a></li>
+        <li class="dropdown">
+          <p>Páginas:</p>
+          <ul>
+            <li><a href="pagina2.html">Cartografia</a></li>
+            <li><a href="pagina3,1.html">Geopolitica</a></li>
+            <li><a href="pagina3,2.html">Climas</a></li>
+            <li><a href="pagina3,3.html">Relevo</a></li>
+            <li><a href="pagina3,4.html">Problemas Ambientais</a></li>
+            <li><a href="pagina3,5.html">Geografia Econômica</a></li>
+            <li><a href="pagina3,6.html">Sambaqui</a></li>
+          </ul>
+        </li>
+        <li class="some"><a href="pagina2.html">Cartografia</a></li>
+        <li class="some"><a href="pagina3,1.html">Geopolitica</a></li>
+        <li class="some"><a href="pagina3,2.html">Climas</a></li>
+        <li class="some"><a href="pagina3,3.html">Relevo</a></li>
+        <li class="some"><a href="pagina3,4.html">Problemas Ambientais</a></li>
+        <li class="some"><a href="pagina3,5.html">Geografia Econômica</a></li>
+        <li class="some"><a href="pagina3,6.html">Sambaqui</a></li>
       </ul>
     </div>
   </nav>
