--- a/pagina2.html
+++ b/pagina2.html
@@ -18,16 +18,26 @@
 
   </header>
   <nav>
-    <div id="menu">
+    <div id="menu" class="menuDropdown">
       <ul>
         <li><a href="index.html">Página Inicial</a></li>
-        <li><a href="pagina2.html">Cartografia</a></li>
-        <li><a href="pagina3,1.html">Geopolitica</a></li>
-        <li><a href="pagina3,2.html">Climas</a></li>
-        <li><a href="pagina3,3.html">Relevo</a></li>
-        <li><a href="pagina3,4.html">Problemas Ambientais</a></li>
-        <li><a href="pagina3,5.html">Geografia Econômica</a></li>
-        <li><a href="pagina3,6.html">Sambaqui</a></li>
+        <li class="dropdown">
+          <p>Páginas:</p>
+          <ul>
+            <li><a href="pagina3,1.html">Geopolitica</a></li>
+            <li><a href="pagina3,2.html">Climas</a></li>
+            <li><a href="pagina3,3.html">Relevo</a></li>
+            <li><a href="pagina3,4.html">Problemas Ambientais</a></li>
+            <li><a href="pagina3,5.html">Geografia Econômica</a></li>
+            <li><a href="pagina3,6.html">Sambaqui</a></li>
+          </ul>
+        </li>
+        <li class="some"><a href="pagina3,1.html">Geopolitica</a></li>
+        <li class="some"><a href="pagina3,2.html">Climas</a></li>
+        <li class="some"><a href="pagina3,3.html">Relevo</a></li>
+        <li class="some"><a href="pagina3,4.html">Problemas Ambientais</a></li>
+        <li class="some"><a href="pagina3,5.html">Geografia Econômica</a></li>
+        <li class="some"><a href="pagina3,6.html">Sambaqui</a></li>
       </ul>
     </div>
   </nav>
@@ -52,23 +62,26 @@
         confecção de cartas ou mapas. Os seus produtos, entretanto, não se limitam aos mapas: plantas, croquis e o globo
         terrestre são outros resultados diretos da aplicação dos conhecimentos cartográficos (MUNDO EDUCAÇÃO, 2023).
       </p>
-      <p class="conteudo">O significado da cartografia que temos hoje em dia foi estabelecido pela Associação Cartográfica
+      <p class="conteudo">O significado da cartografia que temos hoje em dia foi estabelecido pela Associação
+        Cartográfica
         Internacional (ACI), no ano 1996, que cada vez é mais aceita (MUNDO EDUCAÇÃO, 2023).
       </p>
-      <p class="conteudo">A cartografia se utiliza de variedade de téCartocnicas para que seja possível a representação do
+      <p class="conteudo">A cartografia se utiliza de variedade de téCartocnicas para que seja possível a representação
+        do
         espaço,
         uma delas é a Escala Cartográfica (MUNDO EDUCAÇÃO, 2023).
       </p>
       <div class="hisimg">
         <p class="referenciaimg"> Figura1 - Cartografia</p>
-       <figure>
-        <img class="imghis" src="imagens/resumo-da-cartografia.jpg" alt="">
-<figcaption>Fonte: resumo escolar, 2023</p>
-       </figure>
+        <figure>
+          <img class="imghis" src="imagens/resumo-da-cartografia.jpg" alt="">
+          <figcaption>Fonte: resumo escolar, 2023</p>
+        </figure>
       </div>
 
       <p class="conteudo">Para que serve a cartografia ? </p>
-      <p class="conteudo">Por meio das técnicas cartográficas, cria-se uma série de produtos que nos auxiliam no estudo e
+      <p class="conteudo">Por meio das técnicas cartográficas, cria-se uma série de produtos que nos auxiliam no estudo
+        e
         compreensão de várias características do espaço físico, como (MUNDO EDUCAÇÃO, 2023):
       </p>
       <ul class="list">
@@ -95,7 +108,8 @@
       <p class="conteudo">
         A cartografia pode ser dividida em duas grandes áreas:
       </p>
-      <p class="conteudo">Cartografia sistemática: ramo da cartografia dedicado à representação das características físicas da
+      <p class="conteudo">Cartografia sistemática: ramo da cartografia dedicado à representação das características
+        físicas da
         superfície terrestre, e por essa razão é também chamada de cartografia topográfica. As informações representadas
         são de caráter genérico e, por isso, duradouras no tempo, sendo coletadas e replicadas por meio de técnicas
         específicas.
@@ -103,10 +117,10 @@
 
       <div class="hisimg">
         <p class="referenciaimg">Figura 2 - Cartografia sistemática</p>
-       <figure>
-        <img class="imghis" src="imagens/Carta-topografica-IBGE.webp" alt="">
-<figcaption>Fonte: GIOVANINI, 2022</p>
-       </figure>
+        <figure>
+          <img class="imghis" src="imagens/Carta-topografica-IBGE.webp" alt="">
+          <figcaption>Fonte: GIOVANINI, 2022</p>
+        </figure>
       </div>
       <p class="conteudo">Cartografia temática: ramo da cartografia dedicado à produção de mapas com base em informações
         geográficas diversas, não se restringindo às dimensões físicas de uma área. Seus produtos indicam a ocorrência
@@ -115,10 +129,10 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 3 - Cartografia temática</p>
-       <figure>
-        <img class="imghis" src="imagens/cartografia-temática.webp" alt="">
-<figcaption>Fonte: GIOVANINI, 2023
-       </figure>
+        <figure>
+          <img class="imghis" src="imagens/cartografia-temática.webp" alt="">
+          <figcaption>Fonte: GIOVANINI, 2023
+        </figure>
         </p>
       </div>
       <p class="tituloParagrafo">Conceitos de cartografia
@@ -129,54 +143,58 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 4 - Tipos de coordenadas geográficas</p>
-       <figure>
-        <img class="imghis" src="imagens/sistema-de-projecao-cartografica-780x424.webp" alt="">
-<figcaption>Fonte: GIOVANINI, 2021 </p>
+        <figure>
+          <img class="imghis" src="imagens/sistema-de-projecao-cartografica-780x424.webp" alt="">
+          <figcaption>Fonte: GIOVANINI, 2021 </p>
       </div>
-      <p class="conteudo">CProjeção cartográfica: são representações da Terra em uma superfície plana. Para isso, baseiam-se
+      <p class="conteudo">CProjeção cartográfica: são representações da Terra em uma superfície plana. Para isso,
+        baseiam-se
         em uma rede composta por linhas imaginárias horizontais e verticais (paralelos e meridianos) perpendiculares
         entre si. São classificadas quanto à superfície de projeção (cônica, cilíndrica, plana) e quanto às suas
         propriedades (conforme, equidistante, equivalente) (OLIVEIRA, 2019).
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 5 - Projeção cartográfica</p>
-       <figure>
-        <img class="imghis" src="imagens/coordenadas-geograficas-1024x490.webp" alt="">
-<figcaption>Fonte: GIOVANINI, 2021 </p>
-       </figure>
+        <figure>
+          <img class="imghis" src="imagens/coordenadas-geograficas-1024x490.webp" alt="">
+          <figcaption>Fonte: GIOVANINI, 2021 </p>
+        </figure>
       </div>
       <p class="conteudo">Escala cartográfica: é uma relação numérica (proporção) entre as dimensões de uma superfície,
         conforme são representadas no mapa, e suas dimensões reais, medidas de forma linear. Uma escala de 1:250.000
         expressa em centímetros, por exemplo, indica que cada centímetro do mapa corresponde a 250.000 cm ou 2,5 km na
         superfície do terreno (OLIVEIRA, 2019).
       </p>
-      <p class="conteudo">Mapas: são representações gráficas, em escala reduzida, da superfície terrestre ou de parte dela
+      <p class="conteudo">Mapas: são representações gráficas, em escala reduzida, da superfície terrestre ou de parte
+        dela
         sobre um plano. Podem ainda representar Projeção Cilíndrica (OLIVEIRA, 2019).
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 6 - Mapa mundi</p>
-       <figure>
-        <img class="imghis" src="imagens/mapa-mundi-político.png.webp" alt="">
-        <figcaption>Fonte: GIOVANINI, 2020</p>
-       </figure>
+        <figure>
+          <img class="imghis" src="imagens/mapa-mundi-político.png.webp" alt="">
+          <figcaption>Fonte: GIOVANINI, 2020</p>
+        </figure>
       </div>
-      <p class="conteudo">Essa projeção é a consequência da projeção dos paralelos e meridianos sobre um cilindro. Esse tipo
+      <p class="conteudo">Essa projeção é a consequência da projeção dos paralelos e meridianos sobre um cilindro. Esse
+        tipo
         de projeção tem os paralelos retos e horizontais; e os meridianos retos e verticais, as regiões de latitudes
         elevadas sofrem com deformações. É a projeção mais usada para representação total da Terra (OLIVEIRA, 2019).
       </p>
       <p class="tituloParagrafo">Projeções</p>
       <p class="conteudo">Projeção Cônica
       </p>
-      <p class="conteudo">Essa projeção é a consequência da projeção do globo terrestre sobre um cone. Esse tipo de projeção
+      <p class="conteudo">Essa projeção é a consequência da projeção do globo terrestre sobre um cone. Esse tipo de
+        projeção
         possui paralelos circulares e meridianos radiais, ou seja, retas originadas de um único ponto; normalmente a
         projeção cônica é usada para a representação de países ou regiões de latitudes intermediárias. (OLIVEIRA,2019)
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 7 - Projeção cônica</p>
-       <figure>
-        <img class="imghis" src="imagens/3-19.gif" alt="">
-        <figcaption>Fonte: RAMOS, 2018</p>
-       </figure>
+        <figure>
+          <img class="imghis" src="imagens/3-19.gif" alt="">
+          <figcaption>Fonte: RAMOS, 2018</p>
+        </figure>
       </div>
       <p class="conteudo">Projeção Azimutal</p>
       <p class="conteudo">A Projeção Azimutal tem como ponto de referência o Polo Sul ou Norte, normalmente o Norte.
@@ -184,22 +202,23 @@
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 8 - Projeção azimutal</p>
-       <figure>
-        <img class="imghis" src="imagens/proclau6.jpg" alt="">
-        <figcaption>Fonte: MENDONÇA, 2013</p>
-       </figure>
+        <figure>
+          <img class="imghis" src="imagens/proclau6.jpg" alt="">
+          <figcaption>Fonte: MENDONÇA, 2013</p>
+        </figure>
       </div>
       <p class="conteudo">Projeção Robinson</p>
-      <p class="conteudo">Essa é a projeção mais usada na atualidade, ela não causa deformações nas formas, porém não preserva
+      <p class="conteudo">Essa é a projeção mais usada na atualidade, ela não causa deformações nas formas, porém não
+        preserva
         nenhuma propriedade de conformidade. Essa projeção é comum no atlas e mapas escolares espacialmente determinadas
         informações geográficas, compondo, assim, os mapas temáticos (OLIVEIRA, 2019).</p>
 
       <div class="hisimg">
         <p class="referenciaimg">Figura 9 - Projeção Robinson</p>
-       <figure>
-        <img class="imghis" src="imagens/4fd7ed1cae73e62edab51157d5567389.jpg" alt="">
-        <figcaption>Fonte: PENA, 2023</p>
-       </figure>
+        <figure>
+          <img class="imghis" src="imagens/4fd7ed1cae73e62edab51157d5567389.jpg" alt="">
+          <figcaption>Fonte: PENA, 2023</p>
+        </figure>
       </div>
 
       <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
