correção texto para css

--- a/pagina2.html
+++ b/pagina2.html
@@ -147,7 +147,7 @@
           <img class="imghis" src="imagens/sistema-de-projecao-cartografica-780x424.webp" alt="">
           <figcaption>Fonte: GIOVANINI, 2021 </p>
       </div>
-      <p class="conteudo">CProjeção cartográfica: são representações da Terra em uma superfície plana. Para isso,
+      <p class="conteudo">Projeção cartográfica: são representações da Terra em uma superfície plana. Para isso,
         baseiam-se
         em uma rede composta por linhas imaginárias horizontais e verticais (paralelos e meridianos) perpendiculares
         entre si. São classificadas quanto à superfície de projeção (cônica, cilíndrica, plana) e quanto às suas
@@ -264,13 +264,22 @@
         em:
         https://brasilescola.uol.com.br/geografia/projecao-robinson.htm. Acesso em 25 de abril de 2023.
       </p>
-      <p class="bibliografia">PENA, Rodolfo Alves. Coordenadas geográficas; Escola Kids. Disponível
-        em:https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic.escolakids.uol.com.br%2Fconteudo_legenda%2Fb125906d426f1733e142338e5cf9a59c.jpg&tbnid=ecBNCTxGfB91kM&vet=1&imgrefurl=https%3A%2F%2Fescolakids.uol.com.br%2Fgeografia%2Fcoordenadas-geograficas.htm&docid=vgELfl5Mhz1tDM&w=400&h=208&hl=pt-BR&source=sh%2Fx%2Fim.
+      <p class="bibliografia">PENA, Rodolfo Alves. Coordenadas geográficas; Escola Kids.
+        Disponível
+        em: 
+        <wbr>https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic.escolakids.uol.com.<wbr>br%2Fconteudo_legenda%2Fb125906d
+        <wbr>426f1733e142338e5cf9a59c.jpg&tbnid
+        <wbr>=ecBNCTxGfB91kM&vet=1&imgrefurl
+        <wbr>=https%3A%2F%2Fescolakids.uol.com.br%
+        <wbr>2Fgeografia%2Fcoordenadas-geograficas.htm&docid=vgELfl5Mhz1tDM&w
+        <wbr>=400&h=208&hl=pt-BR&source=sh%2Fx%2Fim.
+        <wbr>
         Acesso em 25 de abril de 2023
       </p>
       <p class="bibliografia">RAMOS, Martha.Cartografia: projeções cônica e azimutal . Blog do Enem.
         Disponível
-        em:https://www.google.com/imgres?imgurl=https%3A%2F%2Fblogdoenem.com.br%2Fwp-content%2Fuploads%2F2016%2F04%2F3-19.gif&tbnid=weoN363mXYE9UM&vet=1&imgrefurl=https%3A%2F%2Fblogdoenem.com.br%2Fcartografia-projecoes-conica-plana-azimutal-geografia-enem%2F&docid=C1hvUdBpGVWsNM&w=276&h=183&hl=pt-BR&source=sh%2Fx%2Fim.
+        em:https://www.google.com/imgres?imgurl=https%3A%2F%2Fblogdoenem.com.br%2Fwp-content%2Fuploads%2F2016%2F04%2F3-19.gif&tbnid=weoN363mXYE9UM&vet=1&
+        <wbr>imgrefurl=https%3A%2F%2Fblogdoenem.com.br%2Fcartografia-projecoes-conica-plana-azimutal-geografia-enem%2F&docid=C1hvUdBpGVWsNM&w=276&h=183&hl=pt-BR&source=sh%2Fx%2Fim.
         Acesso em 25 de abril de 2023
       </p>
       <p class="bibliografia">RESUMOESCOLAR. Resumo sobre geografia; Resumo Escolar. Disponível em:
