--- a/pagina3,5.html
+++ b/pagina3,5.html
@@ -18,7 +18,7 @@
   <nav>
     <div id="menu" class="menuDropdown">
       <ul>
-        <li><a href="index.html">Página Inicial</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="dropdown">
           <p>Páginas:</p>
           <ul>
